[package]
name = "bocsr"
version = "0.1.0"
authors = ["Shane Murphy <shaneeverittmurphy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
itertools = "0.10.0"
clap = "2.33.3"
bocs = { git = "https://github.com/ShaneEverittM/bocs", branch = "main" }

